--- a/wercker.yml
+++ b/wercker.yml
@@ -24,5 +24,5 @@ build:
         name: echo
         code: |
           - export NODE_ENV='testing'
-          - export SS_CONFIG -s 0.0.0.0 -p 6443 -m aes-256-cfb -k test123 --fast-open
-          - /entrypoint.sh
+          - export SS_CONFIG='-s 0.0.0.0 -p 6443 -m aes-256-cfb -k test123 --fast-open'
+    - entrypoint.sh
