--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,5 @@ jobs:
     docker:
       - image: mritd/shadowsocks:latest
     steps:
-      - run: entrypoint.sh
+      - run: -dt --name ss -p 6443:6443 mritd/shadowsocks -s "-s 0.0.0.0 -p 6443 -m aes-256-cfb -k test123 --fast-open"
       
